[gd_scene load_steps=7 format=2]

[ext_resource path="res://menus/player_status.gd" type="Script" id=1]
[ext_resource path="res://menus/images/health2.png" type="Texture" id=2]
[ext_resource path="res://menus/images/health3.png" type="Texture" id=3]
[ext_resource path="res://menus/images/bull3.png" type="Texture" id=4]
[ext_resource path="res://menus/images/bull4.png" type="Texture" id=5]
[ext_resource path="res://menus/images/navi.png" type="Texture" id=6]

[node name="Status" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="Health" type="RichTextLabel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 44.0
margin_top = 11.0
margin_right = 119.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Visibility", "custom_styles" ]

[node name="HealthTextureProgress" type="TextureProgress" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 127.0
margin_top = 13.0
margin_right = 227.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
texture_under = ExtResource( 2 )
texture_over = null
texture_progress = ExtResource( 3 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Radial Fill", "Textures" ]

[node name="HandgunBullets" type="RichTextLabel" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 369.0
margin_top = 11.0
margin_right = 460.0
margin_bottom = 33.0
rect_rotation = -0.00481542
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false

[node name="HandgunBulletsTextureProgress" type="TextureProgress" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 480.0
margin_top = 6.0
margin_right = 510.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 10.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 4 )
texture_over = null
texture_progress = ExtResource( 5 )
fill_mode = 5
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Material", "Textures" ]

[node name="RifleBullets" type="RichTextLabel" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 691.0
margin_top = 10.0
margin_right = 789.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "custom_fonts" ]

[node name="RifleBulletsTextureProgress" type="TextureProgress" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 800.0
margin_top = 5.0
margin_right = 830.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 30.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 4 )
texture_over = null
texture_progress = ExtResource( 5 )
fill_mode = 5
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Textures" ]

[node name="Direction" type="Sprite" parent="." index="6"]

position = Vector2( 990.051, 33.0802 )
scale = Vector2( 0.164647, 0.152313 )
texture = ExtResource( 6 )


